// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPickerRow should be rendered correctly 1`] = `
<div
  aria-posinset={2}
  className="uui-flex-row pickerRow container align-items-center"
  role="option"
  style={
    Object {
      "columnGap": undefined,
      "rowGap": undefined,
    }
  }
>
  <div
    className="flexCell root data-picker-cell uui-size-36 align-widgets-top"
    role="cell"
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": undefined,
      }
    }
  >
    <div
      className="contentWrapper"
    >
      <div
        className="renderItem"
      >
        <div />
        <div
          className="flexSpacer"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DataPickerRow should be rendered correctly 2`] = `
<div
  aria-posinset={2}
  aria-selected={true}
  className="uui-flex-row uui-focus pickerRow container -clickable align-items-center"
  onClick={[Function]}
  role="option"
  style={
    Object {
      "columnGap": undefined,
      "rowGap": undefined,
    }
  }
>
  <div
    className="flexCell root data-picker-cell uui-size-48 align-widgets-top"
    role="cell"
    style={
      Object {
        "--uui-data_picker_cell-horizontal-padding": "24px",
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": undefined,
      }
    }
  >
    <div
      className="contentWrapper"
    >
      <div
        className="renderItem"
      >
        <div />
        <div
          className="flexSpacer"
        />
        <div
          className="iconWrapper uui-selected"
        >
          <div
            aria-label="Selected"
            className="container uui-icon uui-enabled selectedMark"
            style={Object {}}
          >
            <svg
              className=""
              height="24"
              width="24"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
